Partway implementation of pop-up view for submit

--- a/Brief/ComposeViewController.xib
+++ b/Brief/ComposeViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6206.8" systemVersion="14A329f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6206.8" systemVersion="14A343f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7026.1"/>
     </dependencies>
@@ -34,7 +34,7 @@
                         <barButtonItem systemItem="action" id="D7u-rM-j7t">
                             <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                             <connections>
-                                <action selector="actionBrief:" destination="-1" id="PVl-mN-Udb"/>
+                                <action selector="actionPressed:" destination="-1" id="GJi-c3-PIf"/>
                             </connections>
                         </barButtonItem>
                     </items>
