initial cut at pop-up collection view

--- a/Brief/SubmitPopUpViewController.xib
+++ b/Brief/SubmitPopUpViewController.xib
@@ -7,6 +7,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SubmitPopUpViewController" customModule="Brief">
             <connections>
                 <outlet property="closeButton" destination="uG5-45-uU2" id="d2l-jV-PZW"/>
+                <outlet property="collectionView" destination="dpi-ZY-Oxx" id="eFI-vJ-Ero"/>
                 <outlet property="popUpView" destination="qSs-gW-P0N" id="n0U-vZ-7HM"/>
                 <outlet property="submit" destination="jIt-0c-Ros" id="SGT-FK-uoG"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -18,40 +19,45 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qSs-gW-P0N">
-                    <rect key="frame" x="21" y="84" width="279" height="241"/>
+                    <rect key="frame" x="21" y="78" width="279" height="233"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jIt-0c-Ros">
-                            <rect key="frame" x="18" y="196" width="36" height="30"/>
+                            <rect key="frame" x="18" y="194" width="36" height="30"/>
                             <state key="normal" title="Send">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                         </button>
                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="y7p-eL-kfQ">
-                            <rect key="frame" x="18" y="120" width="241" height="68"/>
+                            <rect key="frame" x="18" y="118" width="241" height="68"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         </textView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Comments" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kLu-Rv-XpY">
-                            <rect key="frame" x="18" y="96" width="85" height="21"/>
+                            <rect key="frame" x="18" y="94" width="85" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uG5-45-uU2">
-                            <rect key="frame" x="211" y="196" width="48" height="30"/>
+                            <rect key="frame" x="211" y="194" width="48" height="30"/>
                             <state key="normal" title="Cancel">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                         </button>
                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="dpi-ZY-Oxx">
-                            <rect key="frame" x="18" y="8" width="241" height="52"/>
-                            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="jHa-fB-0nr">
+                            <rect key="frame" x="19" y="21" width="241" height="52"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="jHa-fB-0nr" customClass="PunchedLayout" customModule="Brief" customModuleProvider="target">
                                 <size key="itemSize" width="50" height="50"/>
                                 <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                 <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                 <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                             </collectionViewFlowLayout>
+                            <connections>
+                                <outlet property="dataSource" destination="-1" id="aWX-j5-tOh"/>
+                                <outlet property="delegate" destination="-1" id="4Pt-XO-erb"/>
+                            </connections>
                         </collectionView>
                     </subviews>
                     <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
