much nicer selected icon

--- a/Brief/TeamMemberCollectionViewCell.xib
+++ b/Brief/TeamMemberCollectionViewCell.xib
@@ -25,9 +25,12 @@
                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fcr-ou-YSN">
                         <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="checkmark" translatesAutoresizingMaskIntoConstraints="NO" id="e9S-rW-ewf">
-                                <rect key="frame" x="16" y="16" width="48" height="48"/>
-                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="☑︎" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ske-Pp-ten">
+                                <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="88"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="0.70000000000000007" colorSpace="calibratedWhite"/>
                     </view>
@@ -47,6 +50,5 @@
     </objects>
     <resources>
         <image name="avatar" width="210" height="210"/>
-        <image name="checkmark" width="64" height="64"/>
     </resources>
 </document>
